# app/src/interfaces/types/Priority.ts
@@ -1,0 +1,5 @@
+export enum Priority { 
+    'ALTA', 
+    'MEDIA',
+    'BAIXA'
+};
