# app/src/middlewares/ChecksAndValidations.ts
@@ -1,50 +1,23 @@
 import { PrismaClient } from '@prisma/client';
-import { PersonType } from '@prisma/client';
+import { Priority } from '@prisma/client';
 import { Request, Response, NextFunction } from 'express';
 import AppError from '../libs/errors/AppError';
-import SanitizeAndValidate from '../utils/SanitizeAndValidate';
 
 const prismaClient = new PrismaClient();
-const sanitizeAndValidate = new SanitizeAndValidate();
 
 export default class CheckAndValidations {
   public checkMandatoryData(req: Request, res: Response, next: NextFunction): void {
     const bodyData = req.body;
 
-    if (!bodyData.type)
+    if (!bodyData.title)
       throw new AppError('Type of person is needed.', 400);
 
-    if (bodyData.type == PersonType.JURIDICAL && !bodyData.cnpj)
-      throw new AppError('CNPJ is needed for Juridical type of person.', 400);
+    if (bodyData.priority != Priority.ALTA && bodyData.priority != Priority.MEDIA && bodyData.priority != Priority.BAIXA)
+      throw new AppError('Priority is needed for ALTA, MEDIA, BAIXA .', 400);
 
-    if (!bodyData.cpf) throw new AppError('CPF is needed.', 400);
+    if (!bodyData.description) throw new AppError('Description is needed.', 400);
 
-    if (!bodyData.name) throw new AppError('Name is needed.', 400);
-
-    if (!bodyData.celPhone) throw new AppError('Cel Phone is needed.', 400);
-
-    if (!bodyData.telPhone)
-      throw new AppError('Tel Phone is needed.', 400);
-
-    if (!bodyData.email)
-      throw new AppError('E-mail is needed.', 400);
-
-    if (!bodyData.cep) throw new AppError('CEP is needed.', 400);
-
-    if (!bodyData.streetName)
-      throw new AppError('Street Name is needed.', 400);
-
-    if (!bodyData.streetNumber)
-      throw new AppError('Address number is needed.', 400);
-
-    if (!bodyData.neighborhood)
-      throw new AppError('Neighborhood is needed.', 400);
-
-    if (!bodyData.city)
-      throw new AppError('City is needed.', 400);
-
-    if (!bodyData.state)
-      throw new AppError('State is needed.', 400);
+    if (!bodyData.completion_date) throw new AppError('Completion Date is needed.', 400);
 
     next();
   }
@@ -53,57 +26,15 @@ export default class CheckAndValidations {
     try {
       const bodyData = req.body;
 
-      const userEmailAlreadyRegistered = await prismaClient.user.findUnique({
+      const taskTitleAlreadyRegistered = await prismaClient.task.findUnique({
         where: {
-          email: bodyData.email,
+          title: bodyData.title,
         },
       });
 
-      if (userEmailAlreadyRegistered)
-        throw new AppError('This e-mail is already registered.', 400);
-
-      if (!sanitizeAndValidate.validateEmail(bodyData.email))
-        throw new AppError('Invalid e-mail.', 400);
-
-      if (!(bodyData.type in PersonType))
-        throw new AppError('Invalid person type.', 400);
-
-      if (bodyData.type === 'JURIDICAL') {
-        const cnpjAreadyRegistered = await prismaClient.user.findUnique({
-          where: {
-            cnpj: bodyData.cnpj,
-          },
-        });
-
-        if (cnpjAreadyRegistered)
-          throw new AppError('This CNPJ is already registered.', 400);
-
-        if (!sanitizeAndValidate.validateCNPJ(bodyData.cnpj))
-          throw new AppError('Invalid CNPJ', 400);
-      }
-
-      if (bodyData.type === 'PHYSICAL') {
-        const cpfAlreadyRegisteredOnPhysicalType =
-          await prismaClient.user.findFirst({
-            where: {
-              type: 'PHYSICAL',
-              cpf: bodyData.cpf,
-            },
-          });
-
-        if (cpfAlreadyRegisteredOnPhysicalType)
-          throw new AppError('This CPF is already in use.', 400);
-
-        if (!sanitizeAndValidate.validateCPF(bodyData.cpf))
-          throw new AppError('Invalid CPF.', 400);
-      }
-
-      if (!sanitizeAndValidate.validateCEP(bodyData.cep))
-        throw new AppError('Invalid CEP.', 400);
-
-      if (!sanitizeAndValidate.validateState(bodyData.state))
-        throw new AppError('Invalid state.', 400);
-
+      if (taskTitleAlreadyRegistered)
+        throw new AppError('This Task title is already registered.', 400);
+            
       next();
     } catch (error) {
         console.log(error);
